--- a/audi.html
+++ b/audi.html
@@ -1,4 +1,11 @@
-<div class="divTable">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
+<HTML>
+   <HEAD>
+      <TITLE>Audi files</TITLE>
+   </HEAD>
+   <BODY>
+     <div class="divTable">
 <div class="divTableBody">
 <div class="divTableRow">
 <div class="divTableCell"><strong>Audi A1 &ndash; 8X &ndash; 2010 &ndash; 2014</strong></div>
@@ -3964,3 +3971,5 @@
 </div>
 </div>
 </div>
+   </BODY>
+</HTML>
